# OperationArchitecture

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
include/: Config.h  CreateWithParameters.h  GeneratorMap.h  Interpolation.h  Variable.h  VariableType.h
include/Operations/: AbstractOperation.h  IOperation.h  IOperationBase.h  IOperationFactory.h  Operation.h  OperationFactory.h  OperationFactoryRegister.h  OperationPackager.h  Operation_2AxisTable.h  Operation_Execute.h  Operation_FaultDetection.h  Operation_Group.h  Operation_LookupTable.h  Operation_Math.h  Operation_Package.h  Operation_Polynomial.h  Operation_StaticVariable.h  Operation_StoreVariables.h  Operation_UnitConversion.h
libs/OperationArchitecture/: CMakeLists.txt
libs/OperationArchitecture/include/: Variable.h  VariableType.h
libs/OperationArchitecture/src/: Variable.cpp
libs/OperationArchitectureUnitTests/src/: OperationFactoryTests.cpp  (+11 more)
mock/: CMakeLists.txt
src/: Config.cpp  Interpolation.cpp  Variable.cpp
src/Operations/: AbstractOperation.cpp  IOperationBase.cpp  OperationFactory.cpp  OperationFactoryRegister.cpp  OperationPackager.cpp  Operation_2AxisTable.cpp  Operation_Execute.cpp  Operation_FaultDetection.cpp  Operation_Group.cpp  Operation_LookupTable.cpp  Operation_Math.cpp  Operation_Package.cpp  Operation_Polynomial.cpp  Operation_StaticVariable.cpp  Operation_StoreVariables.cpp  Operation_UnitConversion.cpp
test/: CMakeLists.txt
test/src/: OperationFactoryTests.cpp  OperationPackagerTests.cpp  Operation_2AxisTableTests.cpp  Operation_ExecuteTests.cpp  Operation_FaultDetectionTests.cpp  Operation_GroupTests.cpp  Operation_LookupTableTests.cpp  Operation_MathTests.cpp  Operation_PackageTests.cpp  Operation_PolynomialTests.cpp  Operation_StaticVariableTests.cpp  Operation_StoreVariablesTests.cpp  Operation_UnitConversionTests.cpp  VariableTests.cpp
tests/: CMakeLists.txt
tests/src/: Operation_2AxisTableTests.cpp  Operation_FaultDetectionTests.cpp  Operation_LookupTableTests.cpp  Operation_PackageTests.cpp
(+27 files in other folders)
